--- a/front/public/index.html
+++ b/front/public/index.html
@@ -40,6 +40,7 @@
     <div id="root"></div>
     <div id="loginPortal"></div>
     <div id="Modal"></div>
+    <div id="commentModal"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
